--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,11 +197,11 @@ textarea:focus {
 }
 
 #comment_form input[type="submit"] {
-	border: none;
+	border:none;
 	background-color: #2c3e50;
 	color: #95a5a6;
 	border-radius: 5px;
-	width: 13px;
+	width: 13%;
 	height: 35px;
 	margin-top: 3px;
 	position: absolute;
