--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,3 +469,16 @@ textarea:focus {
 #messages_div {
 	margin-top:-300px;
 }
+
+.dropdown_data_window {
+	background-color: #fff;
+	border: 1px solid #DADADA;
+	border-radius: 0 0 8px 8px;
+	border-top: none;
+	width: 300px;
+	position: absolute;
+	right: 10px;
+	top: 40px;
+	overflow: scroll;
+
+}
