--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,7 +432,7 @@ textarea:focus {
 
 .resultDisplay  {
 	padding: 5px 5px 0 5px;
-	height: 60px;
+	height: 70px;
 	border-bottom: 1px solid #D3D3D3;
 }
 
@@ -454,7 +454,7 @@ textarea:focus {
 
 .liveSearchText {
 	background-color: transparent;
-	color: #1E96CA;
+	color: #2c3e50;
 }
 
 .liveSearchText p {
@@ -550,4 +550,25 @@ textarea:focus {
 .button_holder img {
 	margin-top: -1px;
 	width: 30px;
+}
+
+.search_results {
+	background-color: #fff;
+	border: 1px solid #DADADA;
+	border-bottom: none;
+	border-top: none;
+	margin-top: 21px;
+}
+
+.search_results_footer {
+	padding: 7px 4px 0px 4px;
+	height: 30px;
+	border: 1px solid #DADADA;
+	border-top: none;
+	background-color: #2c3e50;
+	text-align: center;
+}
+
+.search_results_footer a {
+	color: #fff;
 }
