styling the search results

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -572,3 +572,22 @@ textarea:focus {
 .search_results_footer a {
 	color: #fff;
 }
+
+
+.search_result {
+	padding: 10px;
+	height: 100px;
+}
+
+.searchPageFriendButtons {
+	float: right;
+}
+
+.result_profile_pic {
+	float: left;
+	margin-right: 10px;
+}
+
+#search_hr {
+	margin-bottom: 0px;
+}
