--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -583,6 +583,14 @@ textarea:focus {
 	float: right;
 }
 
+.searchPageFriendButtons input[type="submit"] {
+	border: none;
+	padding: 7px 12px;
+	border-radius: 5px;
+	color: #fff;
+}
+
+
 .result_profile_pic {
 	float: left;
 	margin-right: 10px;
