--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,7 +400,7 @@ textarea:focus {
 }
 
 .loaded_messages {
-	height: 50%;
+	height: 40%;
 	min-height: 200px;
 	max-height: 400px;
 	overflow: scroll;
@@ -467,7 +467,7 @@ textarea:focus {
 }
 
 #messages_div {
-	margin-top:-300px;
+	margin-top:-10px;
 }
 
 .dropdown_data_window {
@@ -497,4 +497,22 @@ textarea:focus {
 	position: absolute;
 	left: 8px;
 	top: -5px;
+}
+
+.resultDisplayNotification {
+	height: auto;
+	color: #7f8c8d;
+	padding-bottom: 7px;
+}
+
+.resultDisplayNotification img {
+	height: 40px;
+	border-radius: 5px;
+	margin: 1px 12px 0px 2px;
+	float: left;
+}
+
+.timestamp_smaller {
+	font-size: 85%;
+	margin: 0;
 }
