--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
+@font-face {
+	font-family: 'Bellota-LightItalic';
+	src: url('../fonts/Bellota-LightItalic.otf');
+}
+
+@font-face {
+	font-family: 'Bellota-BoldItalic';
+	src: url('../fonts/Bellota-BoldItalic.otf');
+}
+
+body {
+	line-height: 17px;
+}
+
 .top_bar {
 	width: 100%;
 	min-width: 1050px;
@@ -6,4 +20,18 @@
 	border-bottom: 0.25em solid #16a085;
 	margin: 0 0 10px 0;
 	display: inline-flex;
+}
+
+.logo a {
+	font-family: 'Bellota-BoldItalic', sans-serif;
+	margin-left: 10px;
+	font-size: 30;
+	position: relative;
+	top: 9px;
+	text-shadow: #95a5a6 0.5px 0.5px 0px;
+	color: #95a5a6;
+}
+
+a:hover {
+	text-decoration: none;
 }
