--- a/assets/css/register_style.css
+++ b/assets/css/register_style.css
@@ -30,7 +30,7 @@ body  {
 	position: relative;
 	margin-right: auto;
 	margin-left: auto;
-	margin-top: 6%;
+	margin-top: 2%;
 	width: 35%;
 	background-color: #ffffff;
 	border: 1px solid #EDEDED;
@@ -55,6 +55,33 @@ body  {
 	margin-top: 0;
 	margin-bottom: 0;
 	color: #95a5a6;
-	text-shadow: #73B6E2 0.5px 0.5px 0px;
+	text-shadow: #95a5a6 0.5px 0.5px 0px;
 	font-size: 250%;
+}
+
+input[type="submit"] {
+	background-color: #2c3e50;
+	border: 1px solid #2c3e50;
+	border-radius: 3px;
+	margin: 5px 0 10px 0;
+	padding: 5px 10px 5px 10px;
+	color: #95a5a6;
+	text-shadow: #95a5a6 0.5px 0.5px 0px;
+	font-family: 'Bellota-BoldItalic', sans-serif;
+	font-size: 100%;
+
+}
+
+input[type="text"], input[type="email"], input[type="password"] {
+	border: 1px solid #e5e5e5;
+	margin-top: 5px;
+	width: 85%;
+	height: 35px;
+	margin-bottom: 10px;
+	padding-left: 5px;
+	border-radius: 3px;
+}
+
+input[type="text"]:hover, input[type="email"]:hover, input[type="password"]:hover {
+	border-color: #2980b9;
 }
