--- a/assets/css/register_style.css
+++ b/assets/css/register_style.css
@@ -21,3 +21,20 @@ body  {
 	padding: 5px;
 	opacity: 0.9;
 }
+
+.login_header {
+	width: 100%;
+	height: 90px;
+	background-color: #2c3e50;
+	color: #fff;
+	text-align: center;
+	border-top-left-radius: 7px;
+	border-top-right-radius: 7px;
+}
+
+.login_header h1 {
+	margin-top: 0;
+	margin-bottom: 0;
+	color: #95a5a6;
+
+}
