--- a/assets/css/register_style.css
+++ b/assets/css/register_style.css
@@ -8,3 +8,16 @@ body  {
 	background-size: cover;
 	background-image: url("../images/backgrounds/desktop.jpg");
 }
+
+.login_box {
+	position: relative;
+	margin-right: auto;
+	margin-left: auto;
+	top: 7%;
+	width: 35%;
+	background-color: #ffffff;
+	border: 1px solid #EDEDED;
+	border-radius: 7px;
+	padding: 5px;
+	opacity: 0.9;
+}
