--- a/assets/css/register_style.css
+++ b/assets/css/register_style.css
@@ -5,13 +5,6 @@ form {
 body  {
 	margin: 0;
 	padding: 0;
-}
-
-
-.wrapper {
+	background-size: cover;
 	background-image: url("../images/backgrounds/desktop.jpg");
-	background-size: 100%;
-	width: 100%;
-	height: 100%;
-	min-width: 950px;
 }
