--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 .top_bar {
 	width: 100%;
 	min-width: 1050px;
-	height: 40px;
+	height: 45px;
 	background-color: #2c3e50;
 	border-bottom: 0.25em solid #16a085;
 	margin: 0 0 10px 0;
@@ -35,3 +35,26 @@ body {
 a:hover {
 	text-decoration: none;
 }
+
+nav {
+
+	float: right;
+	right: 1px;
+	position: absolute;
+	margin: 10px;
+}
+
+nav a {
+	position: relative;
+	color: #95a5a6;
+	text-decoration: none;
+	font-size: 17px;
+	padding: 3px;
+
+}
+
+nav a:hover {
+ /* border-bottom: 2px solid #16a085; */
+	color: #fff;
+}
+
