styling the user details panel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 
 body {
 	line-height: 17px;
+	background-color: #ecf0f1;
 }
 
 .top_bar {
@@ -20,6 +21,8 @@ body {
 	border-bottom: 0.25em solid #16a085;
 	margin: 0 0 10px 0;
 	display: inline-flex;
+	position: fixed;
+	z-index: 10;
 }
 
 .logo a {
@@ -58,3 +61,27 @@ nav a:hover {
 	color: #fff;
 }
 
+.wrapper {
+	margin: 0 auto;
+	top: 75px;
+	position: relative;
+	padding: 0 10px;
+	width: 75%;
+	min-width: 950px;
+
+}
+
+.column {
+	background-color: #fff;
+	padding: 10px;
+	border: 1px solid #D3D3D3;
+	border-radius: 5px;
+	box-shadow: 2px 2px 1px #D3D3D3;
+	z-index: -1;
+}
+
+.user_details {
+	width: 250px;
+	float: left;
+	margin-bottom: 20px;
+}
