--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,7 @@ textarea:focus {
 	position: absolute;
 	outline: 0;
 	margin-top: 9px;
-	margin-left: 548px;
+	margin-left: 564px;
 }
 
 
@@ -350,4 +350,27 @@ textarea:focus {
 	float: left;
 	width: 70%;
 	z-index: -1;
+}
+
+
+
+#message_textarea {
+	width: 80px;
+	margin-right: 8px;
+	border-radius: 5px;
+	border: 1px solid #D3D3D3;
+	font-size: 12px;
+}
+
+#message_submit {
+	height: 41px;
+	width: 120px;
+	margin: 0;
+	position: absolute;
+	border: none;
+	border-radius: 3px;
+	background-color: #2c3e50;
+	font-family: 'Bellota-BoldItalic', sans-serif;
+	color: #95a5a6;
+	text-shadow: #95a5a6 0.5px 0.5px 0px;
 }
