--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -377,3 +377,33 @@ textarea:focus {
 	color: #95a5a6;
 	text-shadow: #95a5a6 0.5px 0.5px 0px;
 }
+
+.message {
+	border: 1px solid #000;
+	border-radius: 5px;
+	padding: 5px 10px;
+	display: inline-block;
+	color: #fff;
+}
+
+.message#blue {
+	background-color: #2980b9;
+	border-color: #2980b9;
+	float: right;
+	margin-bottom: 5px;
+}
+
+.message#green {
+	background-color: #27ae60;
+	border-color: #27ae60;
+	float: left;
+	margin-bottom: 5px;
+}
+
+.loaded_messages {
+	height: 50%;
+	min-height: 200px;
+	max-height: 400px;
+	overflow: scroll;
+	margin-bottom: 10px;
+}
