--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,9 +163,29 @@ textarea:focus {
 }
 
 
+#comment_iframe { 
+	max-height: 250px;
+	width: 100%;
+}
+
+.comment_section {
+	padding: 0 5px 5px 5px;
+}
+
+.comment_section img {
+	margin: 0 3px 3px 3px;
+	border-radius: 3px;
+}
 
 
-
+#comment_form textarea {
+	width: 85%;
+	height: 35px;
+	border-radius: 5px;
+	color: #616060;
+	font-size: 14px;
+	margin: 3px 3px 3px 5px;
+}
 
 
 
