--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ body {
 	background-color: #ecf0f1;
 }
 
+a {
+	color: #2c3e50;
+	text-decoration: none;
+}
+
 .top_bar {
 	width: 100%;
 	min-width: 1050px;
@@ -151,6 +156,8 @@ textarea:focus {
 	font-size: 15px;
 	padding: 0px 5px;
 	min-height: 75px;
+	cursor: pointer;
+	background-color: none;
 }
 
 .post_profile_pic {
@@ -179,6 +186,7 @@ textarea:focus {
 
 
 #comment_form textarea {
+	border-color: #D3D3D3;
 	width: 85%;
 	height: 35px;
 	border-radius: 5px;
@@ -187,6 +195,18 @@ textarea:focus {
 	margin: 3px 3px 3px 5px;
 }
 
+#comment_form input[type="submit"] {
+	border: none;
+	background-color: #2c3e50;
+	color: #95a5a6;
+	border-radius: 5px;
+	width: 13px;
+	height: 35px;
+	margin-top: 3px;
+	position: absolute;
+	font-family: 'Bellota-BoldItalic', sans-serif;
+	text-shadow: #95a5a6 0.5px 0.5px 0px;
+}
 
 
 
