--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ a {
 	min-width: 1050px;
 	height: 45px;
 	background-color: #2c3e50;
-	border-bottom: 0.25em solid #16a085;
+	border-bottom: 0.25em solid #3498db;
 	margin: 0 0 10px 0;
 	display: inline-flex;
 	position: fixed;
@@ -240,4 +240,38 @@ textarea:focus {
 .like_value {
 	display: inline;
 	font-size: 14px;
+}
+
+.profile_left {
+	top: -10px;
+	width: 17%;
+	max-width: 240px;
+	min-width: 130px;
+	height: 100%;
+	float: left;
+	position: relative;
+	background-color: #2c3e50;
+	border-right: 10px solid #3498db;
+	color: #95a5a6;
+	margin-right: 20px;
+}
+
+.profile_left img {
+	min-width: 80px;
+	width: 55%;
+	margin: 20px;
+	border: 5px solid #3498db;
+	border-radius: 100px;
+}
+
+.profile_info {
+	display: list-item;
+	background-color: #3498db;
+	width: 100%;
+	padding: 10px 0 10px 0;
+}
+
+.profile_info p {
+	margin: 0 0 0 20px;
+	word-wrap: break-word;
 }
