--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 
 body {
 	line-height: 17px;
-	background-color: #ecf0f1;
+	background-color: #fff;
 }
 
 a {
@@ -95,6 +95,7 @@ nav a:hover {
 	width: 125px;
 	display: inline-block;
 	position: absolute;
+	margin: 5px;
 }
 
 .user_details img {
@@ -115,12 +116,12 @@ nav a:hover {
 }
 
 .post_form textarea {
-	width: 92%;
-	height: 60px;
+	width: 100%;
+	height: 100px;
 	border-radius: 3px;
 	margin-right: 5px;
 	border: 1px solid #D3D3D3;
-	font-size: 12px;
+	font-size: 15px;
 	padding: 5px;
 }
 
@@ -129,7 +130,7 @@ textarea:focus {
 }
 
 .post_form input[type="submit"] {
-	width: 5%;
+	width: 9%;
 	height: 30px;
 	border: none;
 	border-radius: 3px;
@@ -140,8 +141,8 @@ textarea:focus {
 	font-size: 90%;
 	position: absolute;
 	outline: 0;
-	margin-top: 30px;
-	margin-left: 3px;
+	margin-top: 9px;
+	margin-left: 548px;
 
 }
 
@@ -171,7 +172,7 @@ textarea:focus {
 
 
 #comment_iframe { 
-	max-height: 250px;
+	min-height: 500px;
 	width: 100%;
 	margin-top: 5px;
 }
@@ -187,26 +188,28 @@ textarea:focus {
 
 
 #comment_form textarea {
-	border-color: #D3D3D3;
-	width: 85%;
-	height: 35px;
-	border-radius: 5px;
+	width: 100%;
 	color: #616060;
-	font-size: 14px;
+	font-size: 15px;
 	margin: 3px 3px 3px 5px;
+	padding: 5px;
+	height: 100px;
 }
 
 #comment_form input[type="submit"] {
-	border:none;
+	width: 12%;
+	height: 30px;
+	border: none;
+	border-radius: 3px;
 	background-color: #2c3e50;
-	color: #95a5a6;
-	border-radius: 5px;
-	width: 13%;
-	height: 35px;
-	margin-top: 3px;
-	position: absolute;
 	font-family: 'Bellota-BoldItalic', sans-serif;
+	color: #95a5a6;
 	text-shadow: #95a5a6 0.5px 0.5px 0px;
+	font-size: 90%;
+	position: absolute;
+	outline: 0;
+	margin-top: 9px;
+	margin-left: 548px;
 }
 
 
@@ -243,17 +246,21 @@ textarea:focus {
 }
 
 .profile_left {
-	top: -10px;
+	top: -30px;
+	border: 1px solid #D3D3D3;
+	border-radius: 5px;
+	box-shadow: 2px 2px 1px #D3D3D3;
 	width: 17%;
 	max-width: 240px;
 	min-width: 130px;
 	height: 100%;
 	float: left;
 	position: relative;
-	background-color: #2c3e50;
-	border-right: 10px solid #3498db;
-	color: #95a5a6;
+	background-color: #fff;
+	border-right: 10px solid #fff;
+	color: ;
 	margin-right: 20px;
+	margin left: 20px;
 }
 
 .profile_left img {
@@ -266,13 +273,13 @@ textarea:focus {
 
 .profile_info {
 	display: list-item;
-	background-color: #3498db;
+	background-color: #fff;
 	width: 100%;
 	padding: 10px 0 10px 0;
 }
 
 .profile_info p {
-	margin: 0 0 0 20px;
+	margin: 10px 0 0 20px;
 	word-wrap: break-word;
 }
 
@@ -301,12 +308,11 @@ textarea:focus {
 }
 
 .profile_left input[type="submit"] {
-	width: 90%;
+	width: 95%;
 	height: 30px;
 	border-radius: 5px;
 	margin: 7px 0 0 7px;
 	border: none;
 	color: #fff;
 }
-
 
