--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,3 +316,20 @@ textarea:focus {
 	color: #fff;
 }
 
+#accept_button {
+	width: 20%;
+    height: 30px;
+    border-radius: 3px;
+    margin: 5px;
+    border: none;
+    background-color: #2ecc71;
+}
+
+#ignore_button {
+    width: 20%;
+    height: 30px;
+    border-radius: 3px;
+    margin: 5px;
+    border: none;
+    background-color: #e74c3c;
+}
