--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,3 +333,25 @@ textarea:focus {
     border: none;
     background-color: #e74c3c;
 }
+
+.delete_button {
+	height: 22px;
+	width: 22px;
+	padding: 0px;
+	float: right;
+	border-radius: 3px;
+	right: -15px;
+	position: relative;
+}
+
+
+.profile_main_column {
+	min-width: 675px;
+	float: left;
+	width: 70%;
+	z-index: -1;
+}
+
+.profile_info_bottom {
+	margin: 10 0 0 7px;
+}
