--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,7 @@ textarea:focus {
 	position: absolute;
 	outline: 0;
 	margin-top: 9px;
-	margin-left: 564px;
+	margin-left: 548px;
 }
 
 
@@ -237,7 +237,7 @@ textarea:focus {
 	padding: 0;
 	height: auto;
 	width: auto;
-	margin: 0;
+	margin: 3px;
 }
 
 .like_value {
@@ -355,15 +355,18 @@ textarea:focus {
 
 
 #message_textarea {
-	width: 80px;
+	width:510px;
+	height: 50px;
 	margin-right: 8px;
 	border-radius: 5px;
 	border: 1px solid #D3D3D3;
 	font-size: 12px;
+	padding: 5px;
 }
 
 #message_submit {
-	height: 41px;
+	margin-top: 2px;
+	height: 50px;
 	width: 120px;
 	margin: 0;
 	position: absolute;
