--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,3 +461,11 @@ textarea:focus {
 	margin-left: 10px;
 	font-size: 12px;
 }
+
+.tab-content {
+	margin-top: 25px;
+}
+
+#messages_div {
+	margin-top:-200px;
+}
