--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -624,3 +624,19 @@ textarea:focus {
 	color: #fff;
 }
 
+.trending {
+	text-align: center;
+	background-color: #2c3e50;
+	color: #fff;
+	border: none;
+	padding: 7px 12px;
+	border-radius: 5px;
+}
+
+
+.postedImage img {
+	max-height: 300px;
+	max-width: 100%;
+	display: block;
+	margin: 5px auto;
+}
